--- a/app/src/main/res/layout/cardview_manage_user.xml
+++ b/app/src/main/res/layout/cardview_manage_user.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp"
     android:layout_marginHorizontal="16dp"
-    android:layout_marginBottom="12dp"
+    android:layout_marginTop="12dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -40,19 +40,19 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/manageUser_organization"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:text="Organization"
-                android:textSize="16sp" />
-
-            <TextView
                 android:id="@+id/manageUser_orgDetail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:text="Organization Detail"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/manageUser_organization"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:text="Organization"
                 android:textSize="16sp" />
         </LinearLayout>
     </LinearLayout>
