--- a/app/src/main/res/layout/cardview_manage_user.xml
+++ b/app/src/main/res/layout/cardview_manage_user.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp"
     android:layout_marginHorizontal="16dp"
-    android:layout_marginTop="12dp"
+    android:layout_marginVertical="6dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
