--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/nav_manageUser"
         android:icon="@drawable/ic_people_black_24dp"
-        android:title="Manage User"/>
+        android:title="Staffs"/>
 
     <item
         android:id="@+id/nav_account"
