--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,11 +18,12 @@
             android:weightSum="2">
 
             <Button
-                android:layout_weight="1"
-                android:text="Menu 1"
-                android:layout_marginHorizontal="4dp"
+                android:id="@+id/home_btnTransaction"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="4dp"
+                android:layout_weight="1"
+                android:text="Transaction" />
 
             <Button
                 android:layout_weight="1"
