--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,6 +18,14 @@
             android:weightSum="2">
 
             <Button
+                android:id="@+id/home_btnBudgeting"
+                android:layout_weight="1"
+                android:text="Budgeting"
+                android:layout_marginHorizontal="4dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <Button
                 android:id="@+id/home_btnTransaction"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -25,12 +33,6 @@
                 android:layout_weight="1"
                 android:text="Transaction" />
 
-            <Button
-                android:layout_weight="1"
-                android:text="Menu 2"
-                android:layout_marginHorizontal="4dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
         </LinearLayout>
 
 
@@ -87,6 +89,5 @@
                 android:layout_height="match_parent"/>
         </LinearLayout>
     </LinearLayout>
-
 
 </LinearLayout>
