--- a/app/src/main/res/layout/activity_budgeting.xml
+++ b/app/src/main/res/layout/activity_budgeting.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,11 +8,18 @@
     android:background="@color/colorGray"
     tools:context=".ActivityTransaction">
 
+    <ProgressBar
+        android:id="@+id/budgeting_progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:id="@+id/budgeting_wholeLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingVertical="16dp"
@@ -69,9 +76,8 @@
                             android:layout_height="match_parent"
                             android:layout_marginBottom="20dp"
                             android:text="- CHOOSE -"
-                            android:textColor="@color/colorDarkGrey"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
+                            android:textColor="#000000"
+                            android:textSize="16sp" />
                     </LinearLayout>
 
                     <RelativeLayout
@@ -115,9 +121,8 @@
                             android:layout_height="match_parent"
                             android:layout_marginBottom="20dp"
                             android:text="- CHOOSE -"
-                            android:textColor="@color/colorDarkGrey"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
+                            android:textColor="#000000"
+                            android:textSize="16sp" />
                     </LinearLayout>
 
                     <RelativeLayout
@@ -203,7 +208,7 @@
                     android:layout_marginBottom="20dp"/>
 
                 <TextView
-                    android:id="@+id/profile_tvTypeBudget2"
+                    android:id="@+id/budgeting_tvTypeBudget2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
@@ -234,4 +239,4 @@
     </ScrollView>
 
 
-</LinearLayout>
+</RelativeLayout>
