--- a/app/src/main/res/layout/activity_budgeting.xml
+++ b/app/src/main/res/layout/activity_budgeting.xml
@@ -76,8 +76,9 @@
                             android:layout_height="match_parent"
                             android:layout_marginBottom="20dp"
                             android:text="- CHOOSE -"
-                            android:textColor="#000000"
-                            android:textSize="16sp" />
+                            android:textColor="@color/colorDarkGrey"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
                     </LinearLayout>
 
                     <RelativeLayout
@@ -121,8 +122,9 @@
                             android:layout_height="match_parent"
                             android:layout_marginBottom="20dp"
                             android:text="- CHOOSE -"
-                            android:textColor="#000000"
-                            android:textSize="16sp" />
+                            android:textColor="@color/colorDarkGrey"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
                     </LinearLayout>
 
                     <RelativeLayout
