--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -17,24 +17,72 @@
             android:layout_height="match_parent"
             android:weightSum="2">
 
-            <Button
-                android:id="@+id/home_btnBudgeting"
+            <RelativeLayout
+                android:id="@+id/dashboard_layoutBudget"
                 android:layout_weight="1"
-                android:text="Budgeting"
-                android:layout_marginHorizontal="4dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-            <Button
-                android:id="@+id/home_btnTransaction"
+                android:background="@color/colorBudgeting"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginHorizontal="4dp"
+                android:layout_margin="8dp">
+
+                <Button
+                    android:id="@+id/dashboard_btnBudgeting"
+                    android:layout_weight="1"
+                    android:backgroundTint="#FFFFFF"
+                    android:background="@drawable/ic_budget"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginHorizontal="4dp"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    android:layout_centerInParent="true"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Budgeting"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="4dp"
+                    android:layout_below="@+id/dashboard_btnBudgeting"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/dashboard_layoutTransaction"
+                android:background="@color/colorTransaction"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Transaction" />
+                android:layout_margin="8dp">
+
+                <Button
+                    android:id="@+id/dashboard_btnTransaction"
+                    android:layout_weight="1"
+                    android:backgroundTint="#FFFFFF"
+                    android:background="@drawable/ic_transaction"
+                    android:textStyle="bold"
+                    android:textColor="#FFFFFF"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginHorizontal="4dp"
+                    android:layout_centerInParent="true"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Transaction"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="4dp"
+                    android:layout_below="@+id/dashboard_btnTransaction"/>
+            </RelativeLayout>
+
 
         </LinearLayout>
-
 
     </LinearLayout>
 
@@ -48,19 +96,69 @@
             android:layout_height="match_parent"
             android:weightSum="2">
 
-            <Button
+            <RelativeLayout
+                android:id="@+id/dashboard_layoutReport"
                 android:layout_weight="1"
-                android:text="Menu 3"
-                android:layout_marginHorizontal="4dp"
+                android:background="@color/color3"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:layout_margin="8dp">
 
-            <Button
+                <Button
+                    android:id="@+id/dashboard_btnReport"
+                    android:layout_weight="1"
+                    android:backgroundTint="#FFFFFF"
+                    android:background="@drawable/ic_report"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginHorizontal="4dp"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    android:layout_centerInParent="true"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Report"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="4dp"
+                    android:layout_below="@+id/dashboard_btnReport"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/dashboard_layoutMenu4"
                 android:layout_weight="1"
-                android:text="Menu 4"
-                android:layout_marginHorizontal="4dp"
+                android:background="@color/color4"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:layout_margin="8dp">
+
+                <Button
+                    android:id="@+id/dashboard_btnMenu4"
+                    android:layout_weight="1"
+                    android:backgroundTint="#FFFFFF"
+                    android:background="@drawable/ic_report"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginHorizontal="4dp"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    android:layout_centerInParent="true"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Menu 4"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="4dp"
+                    android:layout_below="@+id/dashboard_btnMenu4"/>
+            </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
 
@@ -74,19 +172,69 @@
             android:layout_height="match_parent"
             android:weightSum="2">
 
-            <Button
+            <RelativeLayout
+                android:id="@+id/dashboard_layoutMenu5"
                 android:layout_weight="1"
-                android:text="Menu 5"
-                android:layout_marginHorizontal="4dp"
+                android:background="@color/color5"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:layout_margin="8dp">
 
-            <Button
+                <Button
+                    android:id="@+id/dashboard_btnReport"
+                    android:layout_weight="1"
+                    android:backgroundTint="#FFFFFF"
+                    android:background="@drawable/ic_report"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginHorizontal="4dp"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    android:layout_centerInParent="true"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Menu 5"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="4dp"
+                    android:layout_below="@+id/dashboard_btnReport"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/dashboard_layoutMenu6"
                 android:layout_weight="1"
-                android:text="Menu 6"
-                android:layout_marginHorizontal="4dp"
+                android:background="@color/color6"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:layout_margin="8dp">
+
+                <Button
+                    android:id="@+id/dashboard_btnMenu6"
+                    android:layout_weight="1"
+                    android:backgroundTint="#FFFFFF"
+                    android:background="@drawable/ic_report"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginHorizontal="4dp"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    android:layout_centerInParent="true"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Menu 6"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="4dp"
+                    android:layout_below="@+id/dashboard_btnMenu6"/>
+            </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
 
