--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,11 @@
     <color name="colorGreen">#57AD68</color>
     <color name="colorGray">#D3D3D3</color>
     <color name="colorDarkGrey">#A9A9A9</color>
+
+    <color name="colorBudgeting">#ffcc79</color>
+    <color name="colorTransaction">#a580ff</color>
+    <color name="color3">#ff71a1</color>
+    <color name="color4">#7ecfc0</color>
+    <color name="color5">#1089ff</color>
+    <color name="color6">#ff935c</color>
 </resources>
