--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -181,7 +181,7 @@
                 android:layout_margin="8dp">
 
                 <Button
-                    android:id="@+id/dashboard_btnReport"
+                    android:id="@+id/dashboard_btnMenu5"
                     android:layout_weight="1"
                     android:backgroundTint="#FFFFFF"
                     android:background="@drawable/ic_report"
@@ -201,7 +201,7 @@
                     android:textStyle="bold"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="4dp"
-                    android:layout_below="@+id/dashboard_btnReport"/>
+                    android:layout_below="@+id/dashboard_btnMenu5"/>
             </RelativeLayout>
 
             <RelativeLayout
