--- a/app/src/main/res/layout/activity_budgeting.xml
+++ b/app/src/main/res/layout/activity_budgeting.xml
@@ -172,9 +172,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
-                    android:text="Budget 1*"/>
+                    android:text="Budget Monthly**"/>
 
-                <EditText
+                <me.abhinay.input.CurrencyEditText
                     android:id="@+id/budgeting_budget1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -186,9 +186,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
-                    android:text="Budget 2"/>
+                    android:text="Budget Yearly**"/>
 
-                <EditText
+                <me.abhinay.input.CurrencyEditText
                     android:id="@+id/budgeting_budget2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -197,6 +197,7 @@
                     android:layout_marginBottom="20dp"/>
 
                 <TextView
+                    android:id="@+id/budgeting_tvTypeBudget1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
@@ -222,6 +223,13 @@
                     android:layout_height="wrap_content"
                     android:hint="Type Budget 1"
                     android:layout_marginBottom="20dp"/>
+
+                <TextView
+                    android:id="@+id/budgeting_warningFillOne"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="** Fill at least one."
+                    android:textColor="@color/colorAccent"/>
 
             </LinearLayout>
 
