--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -246,9 +246,11 @@
                     android:id="@+id/transaction_TIL_notes"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:hint="Notes">
+                    android:hint="Notes"
+                    app:counterEnabled="true"
+                    app:counterMaxLength="20">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/transaction_notes"
@@ -256,6 +258,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginTop="48dp"
                         android:gravity="top"
+                        android:maxLength="20"
                         tools:layout_editor_absoluteX="0dp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
